<resources>
    <string name="app_name">Diaper Tracker</string>
    <string name="content_desc">Diaper changing svg</string>
    <string name="rb_dirty">Dirty</string>
    <string name="rb_wet">Wet</string>
    <string name="rb_dry">Dry</string>
    <string name="time_et">Enter Time</string>
    <string name="btn_add">Add Diaper</string>
    <string name="btn_clear">Clear All</string>
    <string name="header_text">--Diaper Tracker--</string>
    <string name="desc">Baby</string>
    <string name="placeholder_diaper_changes">0 Diaper changed</string>
    <string name="count">0 Diaper Chnaged</string>
</resources>